# lifegame

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  README.md  autogen.sh  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  lifegame.c  lifegame.h  main.c
